<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetPwdActivity" >

    <include
        android:id="@+id/common_bar"
        layout="@layout/layout_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/common_bar"
        android:background="@color/all_bg_color"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_50"
                android:background="@drawable/textlines_yuan_all"
                android:paddingLeft="8dp" >

                <EditText
                    android:id="@+id/ed_update_phone"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:ems="11"
                    android:hint="@string/tv_phone_tip"
                    android:inputType="phone"
                    android:textSize="@dimen/m_font" />

                <Button
                    android:id="@+id/bt_get_checknum"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/bt_green_yuan_all_selector"
                    android:padding="5dp"
                    android:text="@string/bt_reg_getchecknum"
                    android:textColor="@color/white"
                    android:textSize="@dimen/m_font" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_50"
                android:layout_marginTop="8dp"
                android:background="@drawable/textlines_yuan_all"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="8dp" >

                <EditText
                    android:id="@+id/ed_update_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.56"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/reg_code_hint"
                    android:inputType="number"
                    android:textSize="@dimen/m_font" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height_50"
                android:layout_marginTop="8dp"
                android:background="@drawable/textlines_yuan_all"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="8dp" >

                <EditText
                    android:id="@+id/ed_npassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/update_pwd_hint"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:singleLine="true"
                    android:textSize="@dimen/m_font" />
            </LinearLayout>

            <Button
                android:id="@+id/upPasswowd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bt_green_round_all"
                android:text="@string/bt_reg_check"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>